@@ -106,6 +106,11 @@ var menu = {
 					}
 					$('#vboxIndex').trigger('vmselect',[$('#vboxIndex').data('selectedVM')]);
 				},{'vm':$('#vboxIndex').data('selectedVM').id,'force_refresh':1});
+				
+				// Host refresh refreshes system properties as well
+				if($('#vboxIndex').data('selectedVM').id == 'host') {
+					l.add('SystemProperties',function(d){$('#vboxIndex').data('vboxSystemProperties',d);},{'force_refresh':1});
+				}
 				l.run();
         	},
 			'enabled':function(vm){ return vm; }
